# Speekaboo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
speekaboo/: __init__.py  __main__.py  audio.py  config.py  event.py  gui.py  message_queue.py  server.py  speaker.py  tts.py  voice_manager.py
speekaboo/piper/: README.txt  voice.py
