[project]
name = "speekaboo"
version = "0.2.0"
description = "A drop-in replacement for Speaker.bot using Piper TTS"
authors = [
    {name = "easyaspi314",email = "6258309+easyaspi314@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    'websockets>=14.2',
    'miniaudio>=1.61', 
    'piper_phonemize_fix>=1.2.1',
    'onnxruntime>=1.19.0',
    'appdirs>=1.4.4',
    'tkfilebrowser',
    'darkdetect',
    'tkinter-tooltip',
    'psutil',
    'cachetools',
    'sv_ttk',
    'cuda_available',
    'pywin32; sys_platform == "win32"'
]

[project.scripts]
speekaboo = "speekaboo.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
